@@ -1,30 +1,0 @@
-<?xml version='1.0'?>
-<TestDescriptor>
-    <Name>Test that 'import' schemas are processed correctly </Name>
-    <Author>Arnaud Blandin</Author>
-    <Comment>The bugzilla entry reported for when using a two-layer inclusion
-    mechanism Castor fails to read the schema (see bug 876)</Comment>
-    <Comment> This test case fails but this is normal behavior since
-    the generated schema is semantically equivalent to the given schema</Comment>
-    <Comment>Regression testing
-    </Comment>
-    <Category>basic capability</Category>
-    
-    <BugFix>
-        <Reporter>Alexandre Nouvel[nouvel@irit.fr]</Reporter>
-        <Date_Report>2002-02-11</Date_Report>
-        <Date_Fix>2002-05-17</Date_Fix>
-        <Comment></Comment>
-    </BugFix>
-    <SchemaTest>
-
-   		<!-- ******************** -->
-   		<!-- Schema Element Tests -->
-   		<!-- ******************** -->
-
-   		<UnitTestCase>
-      		<Schema>A.xsd</Schema>
-      	 </UnitTestCase>
-   
-      </SchemaTest>
- </TestDescriptor>
